# Task-Manager

./: .gitignore  README.md  database.db  docker-compose.yaml  pyproject.toml
app/: api.py  consumer.py  database.py  main.py  models.py  producer.py  rabbimq.py  task_status.py
app/enums/: task_operations.py  task_status.py
app/utils/: authentication.py
tests/: test_api.py  test_consumer.py  test_functional.py  test_process_message.py
